--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-streamlit==1.34.0
 langchain==0.1.13
 langchain-community==0.0.29
 huggingface-hub==0.23.2
@@ -12,8 +11,9 @@ PyPDF2==3.0.1
 requests==2.31.0
 pillow==10.3.0
 python-dotenv==1.0.1
-pypdf
-opencv-python
-ultralytics
 werkzeug
 pandas
+flask
+numpy
+matplotlib
+seaborn
