--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-langchain==0.1.13
-langchain-community==0.0.29
-huggingface-hub==0.23.2
-faiss-cpu==1.8.0
-PyDictionary==2.0.1
-sympy==1.12.0
-sentence-transformers==2.5.1
-google-generativeai==0.3.2
-langchain-google-genai==0.0.9
-PyPDF2==3.0.1
-requests==2.31.0
-python-dotenv==1.0.1
+langchain
+langchain-community
+huggingface-hub
+faiss-cpu
+PyDictionary
+sympy
+sentence-transformers
+google-generativeai
+langchain-google-genai
+PyPDF2
+requests
+python-dotenv
 werkzeug
 pandas
 flask
